@@ -2,62 +2,25 @@ package contrib.hud.dialogs;
 
 import com.badlogic.gdx.scenes.scene2d.ui.Skin;
 import contrib.hud.UIUtils;
-import core.Entity;
-import java.util.Collections;
+import java.io.Serial;
+import java.io.Serializable;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 
-/**
- * Transport object describing the data needed to construct a dialog.
- *
- * <p>Acts as a flexible container so dialogs can declare the keys they require while callers can
- * supply arbitrary additional metadata (e.g. for multiplayer synchronisation).
- */
-public final class DialogContext {
+public record DialogContext(DialogType dialogType, Skin skin, Map<String, Object> attributes)
+    implements Serializable {
+  @Serial private static final long serialVersionUID = 1L;
 
-  private final Skin skin;
-  private final String title;
-  private final String entityName;
-  private final Entity entity;
-  private final Map<String, Object> attributes;
-
-  private DialogContext(Builder builder) {
-    this.skin = builder.skin;
-    this.title = builder.title;
-    this.entityName = builder.entityName;
-    this.entity = builder.entity;
-    this.attributes = Collections.unmodifiableMap(new HashMap<>(builder.attributes));
+  /** Compact Constructor ensures immutability and default logic. */
+  public DialogContext {
+    attributes = attributes == null ? Map.of() : Map.copyOf(attributes);
   }
 
+  @Override
   public Skin skin() {
     return skin != null ? skin : UIUtils.defaultSkin();
-  }
-
-  public Optional<String> title() {
-    return Optional.ofNullable(title);
-  }
-
-  public String titleOrDefault(String fallback) {
-    return title != null ? title : fallback;
-  }
-
-  public Optional<String> entityName() {
-    return Optional.ofNullable(entityName);
-  }
-
-  public Entity requireEntity() {
-    return entity()
-        .orElseThrow(() -> new DialogCreationException("DialogContext is missing an entity"));
-  }
-
-  public Optional<Entity> entity() {
-    return Optional.ofNullable(entity);
-  }
-
-  public Map<String, Object> attributes() {
-    return attributes;
   }
 
   public <T> Optional<T> find(String key, Class<T> type) {
@@ -71,7 +34,7 @@ public final class DialogContext {
       throw new DialogCreationException(
           "Attribute '"
               + key
-              + "' must be of type "
+              + "' must be of dialogType "
               + type.getSimpleName()
               + ", got "
               + value.getClass().getSimpleName());
@@ -84,36 +47,25 @@ public final class DialogContext {
         .orElseThrow(() -> new DialogCreationException("Missing required attribute '" + key + "'"));
   }
 
-  public DialogContext withEntity(Entity newEntity) {
-    if (Objects.equals(this.entity, newEntity)) {
-      return this;
-    }
-    return toBuilder().entity(newEntity).build();
+  public static Builder builder() {
+    return new Builder();
   }
 
   public Builder toBuilder() {
     return new Builder(this);
   }
 
-  public static Builder builder() {
-    return new Builder();
-  }
-
   public static final class Builder {
     private Skin skin;
-    private String title;
-    private String entityName;
-    private Entity entity;
+    private DialogType type;
     private final Map<String, Object> attributes = new HashMap<>();
 
     private Builder() {}
 
-    private Builder(DialogContext base) {
-      this.skin = base.skin;
-      this.title = base.title;
-      this.entityName = base.entityName;
-      this.entity = base.entity;
-      this.attributes.putAll(base.attributes);
+    private Builder(DialogContext from) {
+      this.type = from.dialogType();
+      this.skin = from.skin(); // Use accessor to get potentially defaulted skin
+      this.attributes.putAll(from.attributes());
     }
 
     public Builder skin(Skin value) {
@@ -121,18 +73,8 @@ public final class DialogContext {
       return this;
     }
 
-    public Builder title(String value) {
-      this.title = value;
-      return this;
-    }
-
-    public Builder entityName(String value) {
-      this.entityName = value;
-      return this;
-    }
-
-    public Builder entity(Entity value) {
-      this.entity = value;
+    public Builder type(DialogType value) {
+      this.type = Objects.requireNonNull(value, "type");
       return this;
     }
 
@@ -147,10 +89,10 @@ public final class DialogContext {
     }
 
     public DialogContext build() {
-      if (entity == null && entityName == null) {
-        entityName = "dialog_" + System.nanoTime();
+      if (type == null) {
+        throw new DialogCreationException("Dialog dialogType must be set");
       }
-      return new DialogContext(this);
+      return new DialogContext(type, skin, attributes);
     }
   }
 }
